# control_learning

./: .gitignore  CMakeLists.txt  README.md  ROS2_QUICKSTART.md  Readme.md  build_and_run.sh  build_ros2.sh  conanfile.txt  requirements.txt
data/: dataset_meta.json
problem_statement/data_generation/: data_generation.md
ros2_ws/src/control_learning_ros2/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/control_learning_ros2/config/: robot_sim.rviz
ros2_ws/src/control_learning_ros2/examples/: README.md  simple_controller.cpp  square_pattern.py
ros2_ws/src/control_learning_ros2/launch/: robot_sim.launch.py
ros2_ws/src/control_learning_ros2/src/: robot_simulator_node.cpp
ros2_ws/src/control_learning_ros2/urdf/: robot.urdf
scripts/: README.md  simple_dataset_viz.py  simple_visualize.py  visualize_dataset.py  visualize_trajectories.py
scripts/dataset_generation/: analyze_solve_rate.py  config.py  generator.py
src/: CMakeLists.txt
src/c/: CMakeLists.txt
src/c/robot/generated_code/: CMakeLists.txt  README.md  nlp_solver_generated.c  nlp_solver_generated.h
src/cpp/: CMakeLists.txt  README.md  main.cpp  ocp_example.cpp
src/cpp/robot/data/: parameters.json
src/cpp/robot/dynamics/: Model.cpp  README.md  model.cpp
src/cpp/robot/dynamics/include/: Model.hpp  model.hpp
src/cpp/robot/environment/: README.md  initial_state.json  obstacles.json  space.json  target.json
src/cpp/robot/ocp/: Ocp.cpp  Ocp.hpp  Optimizer.cpp  Optimizer.hpp  README.md
src/cpp/robot/ocp/include/: Ocp.hpp
src/cpp/utilities/: README.md  Utilities.cpp  Utilities.hpp  utilities.cpp  utilities.hpp
src/python/: README.md  main.py
src/python/robot/: __init__.py
src/python/robot/dynamics/: __init__.py  model.py
